@@ -1,0 +1,10 @@
+<html><body>
+By rebinding commands in the <b>Shortcuts</b> pane of the <b>Global Options</b>
+dialog box, the <b>C+LEFT</b>/<b>C+RIGHT</b> commands can be reconfigured to skip
+whitespace, like they do in some other text editors.<p>
+
+The standard commands are named <b>Go to Previous/Next Word</b>; the
+alternative versions are named <b>Go to Previous/Next Word (Eat
+Whitespace)</b>. Corresponding <b>Select to...</b> commands exist for
+<b>CS+LEFT</b>/<b>RIGHT</b>.
+</body></html>
